controllerWebhook/deploy/deploycontrollerWebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: deploycontroller-configurator
webhooks:
- name: deploycontroller.configurator.gopaddle.io
  clientConfig:
    service:
      name: controllerwebhook
      namespace: configurator
      path: "/deploycontroller"
      #port: 8015
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVMRENDQXBTZ0F3SUJBZ0lRWmRYNENmQlZqUW5Id2Z1YzltMXdWREFOQmdrcWhraUc5dzBCQVFzRkFEQXYKTVMwd0t3WURWUVFERXlRMU1UVTBNVEUxT1Mwd09EUmhMVFEwWmprdE9UTXhaUzAzT1dVd1pqQXpabUUwTmpjdwpJQmNOTWpFeE1qRXdNRFF5TVRFd1doZ1BNakExTVRFeU1ETXdOVEl4TVRCYU1DOHhMVEFyQmdOVkJBTVRKRFV4Ck5UUXhNVFU1TFRBNE5HRXRORFJtT1MwNU16RmxMVGM1WlRCbU1ETm1ZVFEyTnpDQ0FhSXdEUVlKS29aSWh2Y04KQVFFQkJRQURnZ0dQQURDQ0FZb0NnZ0dCQU1wQTNtVmc3NE1wemNrMlZGdFVvMmpFZm9uKzdPdU42MG41T092bQprZ2h1MFlGSHd1e [...]
  rules:
  - operations: ["CREATE","UPDATE"]
    apiGroups: ["apps"]
    apiVersions: ["v1"]
    resources: ["deployments"]
  admissionReviewVersions: ["v1"]
  sideEffects: None
- name: stscontroller.configurator.gopaddle.io
  clientConfig:
    service:
      name: controllerwebhook
      namespace: configurator
      path: "/stscontroller"
      #port: 8015
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVMRENDQXBTZ0F3SUJBZ0lRWmRYNENmQlZqUW5Id2Z1YzltMXdWREFOQmdrcWhraUc5dzBCQVFzRkFEQXYKTVMwd0t3WURWUVFERXlRMU1UVTBNVEUxT1Mwd09EUmhMVFEwWmprdE9UTXhaUzAzT1dVd1pqQXpabUUwTmpjdwpJQmNOTWpFeE1qRXdNRFF5TVRFd1doZ1BNakExTVRFeU1ETXdOVEl4TVRCYU1DOHhMVEFyQmdOVkJBTVRKRFV4Ck5UUXhNVFU1TFRBNE5HRXRORFJtT1MwNU16RmxMVGM1WlRCbU1ETm1ZVFEyTnpDQ0FhSXdEUVlKS29aSWh2Y04KQVFFQkJRQURnZ0dQQURDQ0FZb0NnZ0dCQU1wQTNtVmc3NE1wemNrMlZGdFVvMmpFZm9uKzdPdU42MG41T092bQprZ2h1MFlGSHd1e [...]
  rules:
  - operations: ["CREATE","UPDATE"]
    apiGroups: ["apps"]
    apiVersions: ["v1"]
    resources: ["statefulsets"]
  admissionReviewVersions: ["v1"]
  sideEffects: None
