controllerWebhook/deploy/podcontrollerWebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: podcontroller-configurator
webhooks:
- name: podcontroller.configurator.gopaddle.io
  clientConfig:
    service:
      name: controllerwebhook
      namespace: configurator
      path: "/podcontroller"
      #port: 8015
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVMRENDQXBTZ0F3SUJBZ0lRUkErUkM5eGlpYkNPVDJTRFN0V0xWVEFOQmdrcWhraUc5dzBCQVFzRkFEQXYKTVMwd0t3WURWUVFERXlSaE5qWmhNalk1Wmkwd1pESTNMVFF5TldVdFltWXpNeTA1TXpnd1pqWmtOamMwWWpNdwpJQmNOTWpFeE1qSTNNRE15TmpBd1doZ1BNakExTVRFeU1qQXdOREkyTURCYU1DOHhMVEFyQmdOVkJBTVRKR0UyCk5tRXlOamxtTFRCa01qY3ROREkxWlMxaVpqTXpMVGt6T0RCbU5tUTJOelJpTXpDQ0FhSXdEUVlKS29aSWh2Y04KQVFFQkJRQURnZ0dQQURDQ0FZb0NnZ0dCQUtrOFFMKyt3SG1WclJsOFZneXhTRmw2bkcrdXZLcmYrZGdWOGR1cQovRVc5bUFpbFdub [...]
  rules:
  - operations: ["CREATE",UPDATE]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  admissionReviewVersions: ["v1"]
  sideEffects: None
